--- a/.env
+++ b/.env
@@ -6,3 +6,10 @@ ACCESS_TOKEN = 123
 REFRESH_TOKEN = 789
 PORT = 3338
 
+PORT=3038
+POSTGRES_H=localhost
+POSTGRES_PORT=5433
+POSTGRES_U=postgres
+POSTGRES_PAS=1234
+POSTGRES_DB=HomeWorks
+PRIVATE_KEY=secret_key
