--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
@@ -50,6 +51,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.3.3",
+    "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
